More spacing fixes

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -4,14 +4,15 @@
 
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;600;700&family=Noto+Serif+TC:wght@400;500;700&family=Noto+Serif:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;600;700&family=Noto+Serif+TC:wght@400;500;700");
 
 .english-serif {
 	font-family: "Source Serif Pro", serif;
 }
 
 .chinese-serif {
-	font-family: serif, "Noto Serif SC", "Noto Serif TC";
+	font-family: "Noto Serif SC", "Noto Serif TC", serif;
 }
 
 .red {
